--- a/src/app/pages/application/application.component.html
+++ b/src/app/pages/application/application.component.html
@@ -237,7 +237,12 @@
                   class="spinner-border spinner-border-sm mr-1"
                   *ngIf="applicationForm.valid"
                 ></span> -->
-                Submit →
+                Submit
+                <img
+                  _ngcontent-jba-c20=""
+                  src="../../../assets/images/arrow.svg"
+                  alt="icon"
+                />
               </button>
             </div>
           </form>
