--- a/src/app/pages/services/graphic/graphic.component.html
+++ b/src/app/pages/services/graphic/graphic.component.html
@@ -46,7 +46,7 @@
             <li>
               <div class="icons">
                 <img
-                  src="../../../assets/images/specialize-1.svg"
+                  src="../../../assets/images/icon1.svg"
                   class="img-fluid"
                   alt=""
                 />
