--- a/src/app/pages/job-listing/job-listing.component.scss
+++ b/src/app/pages/job-listing/job-listing.component.scss
@@ -112,3 +112,92 @@
     }
   }
 }
+
+// ***************media query***************
+@media screen and (max-width: 1600px) {
+  .sv-hero {
+    h2 {
+      margin-right: 423px;
+      font-size: 56px;
+    }
+  }
+  .job-details {
+    padding: 20px 0;
+  }
+  a.btn.btn-main {
+    margin-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .sv-hero {
+    padding: 60px 0 59px 0px;
+    background-position: 2% 80%, 89% 29%, 96% 57%, 83% 104%, center center;
+    background-size: 17px, 15px, 30px, 30%, 100%;
+
+    h2 {
+      font-size: 30px !important;
+      line-height: 40px !important;
+    }
+  }
+  .btn-white {
+    padding: 15px 30px;
+    font-size: 18px;
+  }
+  .job-details {
+    background-image: none;
+    .job-details-inner {
+      h4 {
+        font-size: 30px;
+      }
+      ul {
+      }
+      li {
+        margin-bottom: 18px;
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .sv-hero {
+    padding: 39px 0 0px 0px;
+    background-image: none;
+    background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
+    h2 {
+      margin-right: 0;
+    }
+  }
+  a.btn.btn-main img {
+    margin-left: 1px;
+    width: 15px;
+  }
+  .btn-white {
+    img {
+      margin-left: 4px;
+      width: 15px;
+    }
+  }
+
+  .job-details {
+    margin-top: 40px;
+    margin-bottom: 40px;
+
+    .job-details-inner {
+      margin-top: 0px;
+      margin-bottom: 0px;
+      h4 {
+        font-size: 25px;
+        margin: 0px 0 15px;
+      }
+      ul {
+        margin-bottom: 20px;
+      }
+      li {
+        margin-bottom: 14px;
+        font-size: 16px;
+      }
+    }
+  }
+}
