--- a/src/app/pages/services/seo/seo.component.html
+++ b/src/app/pages/services/seo/seo.component.html
@@ -248,7 +248,7 @@
 </section>
 
 <!-- *****************How Do we benefit you ********************* -->
-<section>
+<section class="benefit-wrapper">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
