--- a/src/app/pages/services/graphic/graphic.component.scss
+++ b/src/app/pages/services/graphic/graphic.component.scss
@@ -177,7 +177,7 @@
 
   .Specilize {
     padding: 80px 0 90px 0px;
-
+    background-position: 3% 53%, 95% 13%, 100% 96%;
     .Specilize-title {
       font-size: 38px;
     }
@@ -272,6 +272,12 @@
       }
       ul {
         li {
+          margin: 0 0 25px 0;
+        }
+        li:nth-child(3),
+        li:nth-child(6),
+        li:nth-child(9),
+        li:nth-child(12) {
           margin: 0 0 25px 0;
         }
       }
