--- a/src/app/pages/job-listing/job-listing.component.scss
+++ b/src/app/pages/job-listing/job-listing.component.scss
@@ -190,6 +190,7 @@
       h4 {
         font-size: 25px;
         margin: 0px 0 15px;
+        line-height: 36px;
       }
       ul {
         margin-bottom: 20px;
