--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
         <div class="hero-inner">
           <h1>
             We at <span>Ventonix</span> <br />
-            are professionals
+            are  <span class="typing-css"></span>
           </h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
