wip: typing css

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,8 @@
         <div class="hero-inner">
           <h1>
             We at <span>Ventonix</span> <br />
-            are  <span class="typing-css"></span>
+            are professionals
+            <!-- <span class="typing-css"></span> -->
           </h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -527,17 +528,17 @@
 <!-- **************************lets start your project**************** -->
 <section class="lts">
   <div class="lts-container">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="lts-inner">
-          <h2>Let's start your project now</h2>
-          <a [routerLink]="['/contact']" class="btn-white-border"
-            >Contact us now <img src="../../../assets/images/arrow.svg"
-          /></a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="lts-inner">
+            <h2>Let's start your project now</h2>
+            <a [routerLink]="['/contact']" class="btn-white-border"
+              >Contact us now <img src="../../../assets/images/arrow.svg"
+            /></a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
   </div>
 </section>
