--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -85,6 +85,9 @@
     letter-spacing: 0;
     line-height: 30px;
   }
+  .blue-icon {
+    display: none;
+  }
   a.btn.btn-border {
     color: #fff;
     border: 2px solid #fff;
@@ -102,16 +105,22 @@
       background: $primary-gradient;
       -webkit-background-clip: text !important;
       -webkit-text-fill-color: transparent;
-      &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        background-color: white;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        z-index: -1;
+      // &::after {
+      //   content: "";
+      //   position: absolute;
+      //   left: 0;
+      //   right: 0;
+      //   background-color: white;
+      //   width: 100%;
+      //   height: 100%;
+      //   top: 0;
+      //   z-index: -1;
+      // }
+      .blue-icon {
+        display: block;
+      }
+      .white-icon {
+        display: none;
       }
     }
   }
