--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -89,38 +89,35 @@
     display: none;
   }
   a.btn.btn-border {
-    color: #fff;
+    // color: #fff;
     border: 2px solid #fff;
-    padding: 16px 45px;
-    display: inline-block;
-    position: relative;
-    transition: 0.4s ease all;
+    // padding: 16px 45px;
+    // display: inline-block;
+    // position: relative;
+    // transition: 0.4s ease all;
+    // font-size: 20px;
+    // font-weight: bold;
+    // letter-spacing: 0;
+    // line-height: 24px;
+
+    background-size: 300% 100%;
+    // background-image: linear-gradient(to right, #009eff, #30ccc6, #009eff);
+    border-radius: 5px;
+    padding: 15px 35px;
+    color: #fff;
     font-size: 20px;
     font-weight: bold;
     letter-spacing: 0;
     line-height: 24px;
+    moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
 
     &:hover {
-      background-color: white;
-      background: $primary-gradient;
-      -webkit-background-clip: text !important;
-      -webkit-text-fill-color: transparent;
-      // &::after {
-      //   content: "";
-      //   position: absolute;
-      //   left: 0;
-      //   right: 0;
-      //   background-color: white;
-      //   width: 100%;
-      //   height: 100%;
-      //   top: 0;
-      //   z-index: -1;
-      // }
+      transform: scale(0.9);
       .blue-icon {
         display: block;
-      }
-      .white-icon {
-        display: none;
       }
     }
   }
