feat : fix mobile menu

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -149,7 +149,7 @@
 
 @media screen and (max-width: 1100px) {
   .sv-hero {
-    padding: 60px 0 59px 0px;
+    padding: 120px 0 59px 0px;
     background-position: 2% 80%, 89% 29%, 96% 57%, 83% 151%, center center;
     background-size: 17px, 15px, 30px, 20%, 100%;
     h2 {
@@ -169,6 +169,14 @@
 }
 
 @media screen and (max-width: 767px) {
+  .sv-hero {
+    padding: 145px 0 0px 0px;
+    background-image: none;
+    background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
+    h2 {
+      margin-bottom: 80px;
+    }
+  }
   .work-with-us {
     background-image: none;
     padding: 70px 0 0px 0;
@@ -197,9 +205,4 @@
 }
 
 @media screen and (max-width: 600px) {
-  .sv-hero {
-    padding: 39px 0 0px 0px;
-    background-image: none;
-    background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
-  }
 }
