--- a/src/app/pages/careers/careers.component.scss
+++ b/src/app/pages/careers/careers.component.scss
@@ -109,7 +109,7 @@ a:hover {
 
 @media screen and (max-width: 1100px) {
   .sv-hero {
-    padding: 60px 0 59px 0px;
+    padding: 170px 0 10px 0px;
     background-position: 2% 80%, 89% 29%, 96% 57%, 83% 104%, center center;
     background-size: 17px, 15px, 30px, 30%, 100%;
 
@@ -143,11 +143,14 @@ a:hover {
 
 @media screen and (max-width: 767px) {
   .sv-hero {
-    padding: 39px 0 0px 0px;
+    padding: 145px 0 0px 0px;
     background-image: none;
     background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
     h2 {
-      margin-right: 0;
+      margin: 0 0 100px 0;
+      & > br {
+        display: none;
+      }
     }
   }
   .Currentopenings {
