--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -126,17 +126,17 @@ button {
 
 @media screen and (max-width: 1100px) {
   .login-registration {
-    padding: 70px 0 110px;
+    padding: 170px 0 10px 0px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .sv-hero {
-    padding: 39px 0 0px 0px;
+    padding: 145px 0 0px 0px;
     background-image: none;
     background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
     h2 {
-      margin-right: 0;
+      margin: 0 0 100px 0;
     }
   }
   .login-registration {
