--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -168,7 +168,7 @@
 
 @media screen and (max-width: 1100px) {
   .sv-hero {
-    padding: 60px 0 59px 0px;
+    padding: 170px 0 10px 0px;
     background-position: 2% 80%, 89% 29%, 96% 57%, 83% 151%, center center;
     background-size: 17px, 15px, 30px, 20%, 100%;
 
@@ -194,20 +194,20 @@
 }
 
 @media screen and (max-width: 767px) {
-  .sv-hero {
-    padding: 39px 0 0px 0px;
-
-    background-image: none;
-    background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
-    h2 {
-      margin-right: 0;
-    }
-  }
   .website-feature {
     padding: 80px 0 60px 0;
     p {
       margin-bottom: 20px;
       max-width: 100%;
+    }
+  }
+  .sv-hero {
+    padding: 145px 0 0px 0px;
+    background-image: none;
+    background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
+
+    h2 {
+      margin: 0 0 100px 0;
     }
   }
 }
