--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -17,7 +17,7 @@
   display: none;
 }
 .blueheader {
-  background: linear-gradient(117deg, #009eff 0%, #27c3d0 100%);
+  // background: linear-gradient(117deg, #009eff 0%, #27c3d0 100%);
 }
 
 .navigation__checkbox {
