--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -95,6 +95,7 @@ a.btn.btn-main {
 }
 button {
   border: 0;
+  background: none;
 }
 // *****************media query**********************
 @media screen and (max-width: 1700px) {
