--- a/src/app/pages/services/seo/seo.component.scss
+++ b/src/app/pages/services/seo/seo.component.scss
@@ -117,14 +117,15 @@
   }
   .benefits-list {
     ul {
+      grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+      width: 100%;
+      display: grid;
+      grid-gap: 3rem;
       li {
         background: #fff;
         border-radius: 2px;
-        width: 31%;
-        float: left;
         box-sizing: border-box;
         padding: 60px;
-        margin: 0px 48px 48px 0;
         height: 300px;
         h4 {
           color: #262332;
@@ -141,10 +142,6 @@
           letter-spacing: 0;
           line-height: 30px;
         }
-      }
-      li:nth-child(3),
-      li:nth-child(6) {
-        margin: 0px 0px 48px 0px;
       }
     }
   }
@@ -218,14 +215,11 @@
 
   .benefits {
     padding: 80px 0 90px 0px;
-    background-position: 3% 53%, 95% 13%, 100% 96%;
+    background-position: 3% 53%, 95% 13%, 100% 99%;
     .benefits-list {
       ul {
-        display: flex;
-        flex: 0 0 30%;
-        flex-wrap: wrap;
         li {
-          width: 30%;
+          padding: 3rem;
           display: flex;
           max-height: none;
           flex-direction: column;
@@ -269,6 +263,7 @@
   }
   .benefits {
     padding: 90px 0 126px 0;
+    background-image: none;
     .benefits-title {
       h2 {
       }
@@ -278,11 +273,10 @@
     }
     .benefits-list {
       ul {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-gap: 2rem;
         li {
-          width: 45%;
-          text-align: center;
-          padding: 20px;
-          margin: 0px 30px 30px 0;
+          padding: 2rem;
           h4 {
             font-size: 20px;
             line-height: 32px;
@@ -291,10 +285,6 @@
           p {
             font-size: 18px;
           }
-        }
-        li:nth-child(3),
-        li:nth-child(6) {
-          margin: 0px 30px 30px 0;
         }
       }
     }
@@ -364,7 +354,8 @@
   .benefits-list {
     ul {
       li {
-        width: 44%;
+        padding: 2rem;
+        margin: 0rem !important;
       }
     }
   }
@@ -391,13 +382,5 @@
   a.btn.btn-main img {
     width: 15px;
     margin-left: 0;
-  }
-  .benefits-list {
-    ul {
-      li {
-        width: 100% !important;
-        margin-right: 0 !important;
-      }
-    }
   }
 }
