--- a/src/app/pages/services/website/website.component.scss
+++ b/src/app/pages/services/website/website.component.scss
@@ -119,14 +119,16 @@
   }
   .benefits-list {
     ul {
+      grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+      width: 100%;
+      display: grid;
+      grid-gap: 3rem;
       li {
         background: #fff;
         border-radius: 2px;
-        width: 31%;
-        float: left;
         box-sizing: border-box;
         padding: 60px;
-        margin: 0px 48px 48px 0;
+
         h4 {
           color: #262332;
           font-family: Montserrat;
@@ -144,10 +146,6 @@
           letter-spacing: 0;
           line-height: 30px;
         }
-      }
-      li:nth-child(3),
-      li:nth-child(6) {
-        margin: 0px 0px 48px 0px;
       }
     }
   }
@@ -211,11 +209,8 @@
     padding: 80px 0 90px 0px;
     .benefits-list {
       ul {
-        display: flex;
-        flex: 0 0 30%;
-        flex-wrap: wrap;
         li {
-          width: 30%;
+          padding: 3rem;
         }
       }
     }
@@ -252,6 +247,7 @@
   }
   .benefits {
     padding: 90px 0 126px 0;
+    background-image: none;
     .benefits-title {
       h2 {
       }
@@ -260,12 +256,12 @@
       }
     }
     .benefits-list {
+      margin-top: 60px;
       ul {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-gap: 2rem;
         li {
-          width: 45%;
-          text-align: center;
-          padding: 20px;
-          margin: 0px 30px 30px 0;
+          padding: 2rem;
           h4 {
             font-size: 20px;
             line-height: 32px;
@@ -274,10 +270,6 @@
           p {
             font-size: 18px;
           }
-        }
-        li:nth-child(3),
-        li:nth-child(6) {
-          margin: 0px 30px 30px 0;
         }
       }
     }
@@ -316,7 +308,6 @@
       h2 {
         font-size: 19px !important;
       }
-
       ul {
         margin: 36px 0 45px;
         li {
@@ -335,10 +326,13 @@
     }
   }
 
-  .benefits-list {
-    ul {
-      li {
-        width: 44%;
+  .benefits {
+    .benefits-list {
+      ul {
+        li {
+          padding: 2rem;
+          margin: 0rem !important;
+        }
       }
     }
   }
@@ -359,13 +353,5 @@
   a.btn.btn-main img {
     width: 15px;
     margin-left: 0;
-  }
-  .benefits-list {
-    ul {
-      li {
-        width: 100% !important;
-        margin-right: 0 !important;
-      }
-    }
   }
 }
