fix: responsive isssues

--- a/src/app/pages/services/website/website.component.scss
+++ b/src/app/pages/services/website/website.component.scss
@@ -207,6 +207,7 @@
 
   .benefits {
     padding: 80px 0 90px 0px;
+    background-position: 0% 97%, 95% 13%, 100% 100%;
     .benefits-list {
       ul {
         li {
